<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_description"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sharing_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/sharing_text_title"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sharing_text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_text_body"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sharing_link_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                android:text="@string/sharing_link_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sharing_link_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                android:text="@string/sharing_link_body"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:text="Присылайте ссылку на свой пост на нашу почту hi.clevy@gmail.com и мы вышлем вам промокод."
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:text="Пример:"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/sharing_example" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>